# whackamole

./: CMakeLists.txt
Data/Critter Crossing Customs/: Thumbs.db
src/: Animal.cpp  Animal.h  Game.cpp  Game.h  main.cpp
